Partial refactor to using QDLValues, part 2. Compiles but many tests fail